--- a/kaufman_roberts.ipynb
+++ b/kaufman_roberts.ipynb
@@ -106,7 +106,7 @@
     "\n",
     "    ii = 0\n",
     "    while ii < M:\n",
-    "        print(\"b\", ii+1, \" = \", b[ii])\n",
+    "        print(\"b\"+str(ii+1), \" = \", b[ii])\n",
     "        ii += 1\n",
     "\n",
     "M = 2 #strumienie ruchu (M = len(t[x]) = len(a[x]))\n",
@@ -131,7 +131,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.7 64-bit",
+   "display_name": "Python 3.9.13 64-bit (microsoft store)",
    "language": "python",
    "name": "python3"
   },
@@ -145,12 +145,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "b0fa6594d8f4cbf19f97940f81e996739fb7646882a419484c72d19e05852a7e"
+    "hash": "853b361b17c380ccf2b8bafd77c74402825ee73e78f201f68700eac68bbcd73b"
    }
   }
  },
